# els_pkc

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE.htm  Performance_TSR_niobe4aSdk.xlsx  Performance_TSR_redfinchSdk_sample.xlsx  ReleaseNotes.txt  TSR.xlsx  TSR_Niobe4_EAR1.xlsx  TSR_NirvanaSDK.xlsx  TSR_NirvanaSDK_EAR4.xlsx  TSR_NirvanaSDK_EAR5.xlsx  TSR_RedfinchSDK.xlsx  TSR_RedfinchSDK_EAR5.xlsx  TSR_RedfinchSDK_EAR6.xlsx  TSR_niobe4aSdk.xlsx  TSR_nirvanaSdk.xlsx  TSR_redfinchSdk_sample.xlsx  add_els_pkc_v2.yml  add_els_pkc_v3.yml  clns-lpc.contents.txt  clns-mcxn.contents.txt  clns-mimxrt.contents.txt  clns-niobe4aSdk_2020_EAR1.contents.txt  clns-niobe4aSdk_PRC.contexts.txt  clns-nirvanaSdk_EAR5.contexts.txt  clns-nirvanaSdk_PRC.contexts.txt  clns-nirvanaSdk_RFP1.contexts.txt  clns-nirvanaSdk_cosim_EAR3.contents.txt  clns-nirvanaSdk_cosim_EAR4.contents.txt  clns-nirvanaSdk_cosim_EAR5.contents.txt  clns-redfinchSdk_EAR7.contexts.txt  clns-redfinchSdk_sample_EAR4.contents.txt  clns-redfinchSdk_sample_EAR5.contents.txt  clns-redfinchSdk_sample_EAR6.contents.txt  clns-rt700Sdk_cosim.contents.txt  clns-rw61x.contents.txt  mcux.cmake  softwareContentRegister.txt
doc/html/: _security_guidance_manual.html  _user_guidance_manual.html  annotated.html  annotated_dup.js  classes.html  examples.js  (+572 more)
example/: els_pkc_examples_v2.yml  els_pkc_examples_v3.yml
includes/: mcuxClAeadModes_MemoryConsumption.h  mcuxClAead_Functions.h  mcuxClAes_KeyTypes.h  mcuxClCipher.h  mcuxClCipherModes.h  mcuxClCipherModes_MemoryConsumption.h  mcuxClCipherModes_Modes.h  mcuxClCipher_Functions.h  mcuxClCipher_Types.h  mcuxClCore_Analysis.h  mcuxClCore_Buffer.h  mcuxClCore_Examples.h  mcuxClCore_FunctionIdentifiers.h  mcuxClCore_Platform.h  mcuxClCore_Toolchain.h  mcuxClEcc.h  mcuxClEcc_Constants.h  mcuxClEcc_EdDSA_Internal_CalcHashModN_FUP.h  mcuxClEcc_Functions.h  mcuxClEcc_Internal_Convert_FUP.h  mcuxClEcc_KeyMechanisms.h  mcuxClEcc_MemoryConsumption.h  mcuxClEcc_ParameterSizes.h  mcuxClEcc_Types.h  mcuxClEcc_WeierECC.h  mcuxClEcc_WeierECC_Internal_GenerateDomainParams_FUP.h  mcuxClEls.h  mcuxClEls_Aead.h  mcuxClEls_Common.h  mcuxClEls_Crc.h  mcuxClEls_Ecc.h  mcuxClEls_Hash.h  mcuxClEls_Hmac.h  mcuxClEls_KeyManagement.h  mcuxClEls_Rng.h  mcuxClEls_Types.h  mcuxClEls_mapping.h  mcuxClExample_ELS_Key_Helper.h  mcuxClExample_Key_Helper.h  mcuxClExample_RFC3394_Helper.h  (+59 more)
static_library/: libclns.a.libsize  libclns.a.objsize
zephyr/: CMakeLists.txt
(+2418 files in other folders)
